--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/hamrouni-wajdi/my-porfolio#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "emailjs": "^4.0.1",
     "express": "^4.18.1",
     "nodemailer": "^6.7.8"
   }
